<resources>
    <string name="app_name">10119176Latihan2</string>

    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="rePassword">Retype Password</string>
    <string name="Email">Email</string>
    <string name="Phone">Phone Number</string>
    <string name="Gender1">Male</string>
    <string name="Gender2">Female</string>
    <string name="Blood">Blood Type</string>
    <string name="Reshus">Reshus</string>
    <string name="Personal">Personal</string>
    <string name="Organization">Organization</string>
    <string name="Job">Job</string>
    <string name="Home">Home Address</string>
    <string name="Location">Default Location</string>
    <string name="Perminssion">Agree with Terms and Conditions</string>
    <string name="Or">OR</string>
    <string name="btn1">LOGIN</string>
    <string name="btn2">CONNECT WITH FACEBOOK</string>
    <string name="daftar1">Register</string>
    <string name="btn3">REGISTER</string>

    <string name="Almost">Almost There</string>
    <string name="text1">Thank you for registering with us, One more</string>
    <string name="text2">step, you need to check your email</string>
    <string name="text3">to active your account</string>
    <string name="btn4">VERIFY</string>

    <string name="verify">Verify your Account</string>
    <string name="verification">We have send verification code to your email</string>
    <string name="editText1">enter verification code here...</string>
    <string name="btn5">SEND</string>
    <string name="textView1">Resend</string>

    <string name="nama">Muhammad Fauzan Fadhlulbarr</string>
    <string name="blood_type">Blood type : O</string>
    <string name="blood_give">BLOOD GIVE</string>
    <string name="blood_receive">BLOOD RECEIVED</string>
    <string name="thanks">THANKS</string>
    <string name="search">Search Donor</string>
    <string name="need">Blood Needed</string>
    <string name="message">Message</string>
    <string name="donor">Donor History</string>
    <string name="search2">Search donor near you</string>
    <string name="need2">5 Users need blood</string>
    <string name="message2">10 new messages</string>
    <string name="donor2">3 Gives, 2 Received</string>
</resources>