<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyActivity"
    android:background="@color/Background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Almost"
        style="@style/textViewHeader"
        android:textAlignment="center"
        android:layout_marginTop="200dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        style="@style/textView"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen15"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        style="@style/textView"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen5"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text3"
        style="@style/textView"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen5"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Register"
        android:text="@string/btn4"
        android:onClick="verifyCode"
        android:layout_marginTop="@dimen/dimen80"
        android:layout_marginLeft="@dimen/dimen20"
        android:layout_marginRight="@dimen/dimen20"/>
</LinearLayout>