<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyCodeActivity"
    android:orientation="vertical"
    android:background="@color/Background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        style="@style/textViewHeader2"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen180"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verification"
        style="@style/textView"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen10"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText1"
        android:textAlignment="center"
        style="@style/editText"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dimen40"
        android:layout_marginLeft="@dimen/dimen15"
        android:layout_marginRight="@dimen/dimen15"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Register"
        android:text="@string/btn5"
        android:onClick="send"
        android:layout_marginTop="@dimen/dimen60"
        android:layout_marginLeft="@dimen/dimen20"
        android:layout_marginRight="@dimen/dimen20"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen10">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="doesn't get the code?"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView1"
            style="@style/textViewBold14"/>
    </LinearLayout>
</LinearLayout>