<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen150"
        android:src="@drawable/ic_header_profile"
        android:scaleType="fitXY"/>
    <RelativeLayout
        android:id="@+id/header_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/side_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_side_menu"
            android:layout_marginTop="@dimen/dimen20"
            android:layout_marginLeft="@dimen/dimen10"/>
        <ImageView
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notification"
            android:layout_marginTop="@dimen/dimen20"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen10"/>

        <ImageView
            android:layout_width="121dp"
            android:layout_height="111dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen80"
            android:src="@drawable/profile_photo" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/name_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_profile"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            style="@style/textViewNama"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blood_type"
            android:textSize="@dimen/font16"
            android:textAlignment="center"/>
    </LinearLayout>

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/name_profile"
        android:layout_marginTop="@dimen/dimen10"
        android:background="@color/separator" />
    <LinearLayout
        android:id="@+id/blood_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator1"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen10"
        android:layout_marginLeft="@dimen/dimen30"
        android:layout_marginRight="@dimen/dimen30"
        android:weightSum="100">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="30">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="80"
                android:textStyle="bold"
                android:textColor="@color/Background"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_give"
                style="@style/textViewBlood1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="30">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="110"
                android:textStyle="bold"
                android:textColor="@color/Background"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_receive"
                style="@style/textViewBlood1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="30">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="300"
                android:textStyle="bold"
                android:textColor="@color/Background"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thanks"
                style="@style/textViewBlood1"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator"
        android:layout_below="@+id/blood_profile"
        android:layout_marginTop="@dimen/dimen10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator2"
        android:layout_marginLeft="@dimen/dimen30"
        android:layout_marginTop="@dimen/dimen15"
        android:layout_marginRight="@dimen/dimen30"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dimen90"
                    android:layout_height="@dimen/dimen100"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_search_donor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/search"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font18" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search2"
                    android:textColor="@color/separator"
                    android:textSize="@dimen/font12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dimen90"
                    android:layout_height="@dimen/dimen100"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_blood_needed" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/need"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font18" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need2"
                    android:textColor="@color/separator"
                    android:textSize="@dimen/font12" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen15"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dimen90"
                    android:layout_height="@dimen/dimen100"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_message" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/message"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font18" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message2"
                    android:textColor="@color/separator"
                    android:textSize="@dimen/font12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen80"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dimen90"
                    android:layout_height="@dimen/dimen100"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_donor_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/donor"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font18" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/donor2"
                    android:textColor="@color/separator"
                    android:textSize="@dimen/font12" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>